syntax = "proto3";
option go_package = "/gen";

service CompressionService {
  rpc GetCompression(GetCompressionRequest) returns (GetCompressionResponse);
}
message GetCompressionRequest {
  string videolink = 1;
  string duration = 2;
}
message GetCompressionResponse { string path = 1; }

message Tags {
  string compatible_brands = 1;
  string encoder = 2;
  string major_brand = 3;
  string minor_version = 4;
}

message Metadata {
  string filename = 1;
  int64 nb_streams = 2;
  int64 nb_programs = 3;
  string format_name = 4;
  string format_long_name = 5;
  string start_time = 6;
  string duration = 7;
  string size = 8;
  string bit_rate = 9;
  int64 probe_score = 10;
  Tags tags = 11;
}

service MetadataService {
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc GetUploadURL(GetUploadURLRequest) returns (GetUploadURLResponse);
}
message GetMetadataRequest { string path = 1; }
message GetMetadataResponse { Metadata metadata = 1; }

service VideoService {
  rpc GetVideoDetails(GetVideoDetailsRequest) returns (GetVideoDetailsResponse);
  rpc GetUploadURL(GetUploadURLRequest) returns (GetUploadURLResponse);
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse);
}

message GetVideoDetailsRequest { string path = 1; }
message GetVideoDetailsResponse {
  string link = 1;
  Metadata oldMetadata = 2;
}
message PresignedRequest {
    string method = 1;                // GET, PUT, etc.
    string url = 2;                   // the full URL
    map<string, string> headers = 3;  // headers

}
message GetUploadURLRequest {
  string filename = 1; }

message GetUploadURLResponse {
  int64 job_id = 1;
  PresignedRequest presigned_url = 2;
  string object_key = 3;
}

message GetJobStatusRequest {
  int64 job_id = 1;
}
message GetJobStatusResponse {
  int64 job_id = 1;
  string status = 2;
  PresignedRequest compressed_presigned_url = 3;
}
